// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinancialNavMenu should add class to active route 1`] = `
<div>
  <li
    class="HeaderNavItem-module_navItem__qJl0a HeaderNavItem-module_open__528yj"
  >
    <span
      class="HeaderNavItem-module_labelWithSub__2BcOK HeaderNavItem-module_active__1fUqf"
    >
      Financial
    </span>
    <ul
      class="HeaderNavItem-module_subNav__3MoHr"
    >
      <li
        class="HeaderNavItem-module_navItem__qJl0a"
      >
        <span
          class=""
        >
          overview
        </span>
      </li>
      <li
        class="HeaderNavItem-module_navItem__qJl0a"
      >
        <span
          class=""
        >
          accounts
        </span>
      </li>
    </ul>
  </li>
</div>
`;

exports[`FinancialNavMenu should render 1`] = `
<div>
  <li
    class="HeaderNavItem-module_navItem__qJl0a HeaderNavItem-module_open__528yj"
  >
    <span
      class="HeaderNavItem-module_labelWithSub__2BcOK"
    >
      Financial
    </span>
    <ul
      class="HeaderNavItem-module_subNav__3MoHr"
    >
      <li
        class="HeaderNavItem-module_navItem__qJl0a"
      >
        <span
          class=""
        >
          overview
        </span>
      </li>
      <li
        class="HeaderNavItem-module_navItem__qJl0a"
      >
        <span
          class=""
        >
          accounts
        </span>
      </li>
    </ul>
  </li>
</div>
`;
